# bsl_type_safety_analyzer

./: .dev-console-config.json  .gitignore  ACTIVATION_GUIDE.md  AUTOMATION.md  BUILD_SYSTEM.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  ICON_QUALITY_GUIDE.md  INSTALLATION_GUIDE.md  INTERACTIVE_CONSOLE_v2.md  INTERACTIVE_SCRIPT_ROADMAP.md  LICENSE  MCP_SERVER_README.md  MONETIZATION_STRATEGY.md  PARSER_TEST_RESULTS.md  PROJECT_STRUCTURE.md  PUBLISH_QUICK.md  QUICK_START.md  README.md  STANDALONE_EXTENSION_GUIDE.md  TROUBLESHOOTING_MCP.md  analyze_results.ps1  analyze_results_simple.ps1  clippy.toml  create_hq_logo.py  create_logo_png.py  debug.bsl  dev.cmd  dev.sh  enhance_index.rs  fjf.md  package.json  process_all_docs.rs  roadmap.md  set_cargo_jobs.sh  temp_detailed_parser_validation.md  temp_parser_verification_results.md  (+9 more)
.build-cache/: rust.hash  typescript.hash
.cargo/: config.toml
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: publish.yml  test.yml
.husky/: post-commit  pre-commit
docs/: ANALYZER_UNIFICATION.md  API.md  ARCHITECTURE_REVIEW_SUMMARY.md  AST_REDESIGN_SUMMARY.md  BSL_PARSER_DESIGN.md  CURRENT_DECISIONS.md  LLM_USAGE_GUIDE.md  LSP_IMPLEMENTATION_ROADMAP.md  README.md  REFACTORING_PROGRESS.md  REQUIREMENTS_V2.md  ROADMAP_FROZEN.md  UNIFIED_CONCEPT.md  UNIFIED_INDEX_ARCHITECTURE.md  UNIFIED_TYPE_SYSTEM_ARCHITECTURE.md  UNIFIED_TYPE_SYSTEM_ARCHITECTURE_v2.md  UNIFIED_TYPE_SYSTEM_COMPILED_REVIEW.md  api_reference.md  questions.md
docs/01-overview/: README.md
docs/02-components/: README.md
docs/03-guides/: README.md  integration.md  universal-dev-console.md
docs/04-api/: README.md
docs/05-build-system/: README.md  SMART_BUILD.md
docs/06-publishing/: NAMING_ALTERNATIVES.md  PUBLISHING_GUIDE.md  README.md
docs/07-development/: AUTOMATION.md  README.md  incremental_metrics.md
docs/08-legacy/: CLEANUP_SUMMARY.md
docs/09-workflow-explorer/: README.md  concept.md  data-model.md  implementation-plan.md  metadata-integration.md  realistic-approach.md
docs/archive/: hybrid-storage.md  incremental_parsing.md  migration-notice-2025-08-01.md  old-architecture.md  refactoring-plan.md  syntax-helper.md
docs_search/objects/: Выборка.json  Запрос.json  Объект.json  РезультатЗапроса.json  ТаблицаЗначений.json
examples/: analyzer_with_docs.rs  sample_config_report.txt
examples/ConfTest/: ConfigDumpInfo.xml  Configuration.xml
output/: manifest.json
output/hybrid_docs_direct/: manifest.json
scripts/: build-smart.js  build-with-version.js  cargo-wrapper.js  check-binaries.js  cleanup-project.js  copy-essential-binaries.js  create-minimal-extension.js  deep-cleanup.js  git-workflow.js  interactive-dev-old.js  interactive-dev.js  rebuild-extension.js  version-sync.js  watch-dev.js
src/: contract_generator.rs  lib.rs  lsp_main.rs  main.rs
src/analyzer/: data_flow_analyzer.rs  data_flow_analyzer_integration_test.rs  dependency_analyzer.rs  engine.rs  engine_test.rs  lexical_analyzer.rs  lexical_analyzer_integration_test.rs  mod.rs  rules.rs  semantic.rs  semantic_analyzer_integration_test.rs  validation_manager.rs
src/ast_core/: incremental.rs  interner.rs  mod.rs
src/bsl_parser/: analyzer.rs  ast.rs  ast_bridge.rs  cst_to_arena.rs  data_flow.rs  diagnostics.rs  grammar.rs  keywords.rs  mod.rs  parser.rs  semantic.rs  semantic_arena.rs  simple_types.rs  tree_sitter_adapter.rs
src/cache/: analysis_cache.rs  file_cache.rs  lru_cache.rs  mod.rs
src/cli_common/: args.rs  mod.rs  output.rs  progress.rs
src/configuration/: dependencies.rs  form_parser.rs  metadata.rs  metadata_parser.rs  mod.rs  module_generator.rs  modules.rs  objects.rs
src/core/: errors.rs  fs_utils.rs  mod.rs  position.rs  results.rs
src/diagnostics/: mod.rs
src/docs_integration/: bsl_syntax_extractor.rs  chunked_loader.rs  chunked_writer.rs  hbk_parser.rs  hbk_parser_full.rs  hybrid_storage.rs  mod.rs
src/lsp/: completion.rs  diagnostics.rs  handlers.rs  incremental_integration.rs  mod.rs  server.rs  server_old.rs
src/mcp_server/: analyzer.rs  mod.rs  tools.rs  types.rs
src/metrics/: complexity.rs  duplication.rs  maintainability.rs  mod.rs  recommendations.rs  technical_debt.rs
src/parser/: ast.rs  grammar.rs  incremental.rs  lexer.rs  lexer_new.rs  lexer_old.rs  mod.rs  syntax_analyzer.rs  syntax_analyzer_damaged.rs  syntax_analyzer_integration_test.rs
src/reports/: html.rs  mod.rs  sarif.rs  text.rs
src/rules/: builtin.rs  config.rs  custom.rs  engine.rs  mod.rs
src/unified_index/: builder.rs  configuration_watcher.rs  entity.rs  hierarchy.rs  index.rs  mod.rs  platform_cache.rs  project_cache.rs  xml_parser.rs  xml_parser_test.rs
src/verifiers/: method_verifier.rs  method_verifier_integration_test.rs  mod.rs
test_config/: cli_test.bsl
test_output/: bsl_syntax.json
test_output/docs_search/: main_index.json
test_output/forms/: SMSПодписьСбербанк.json  SMSРассылкаПаролей.json  АвансыПокупателей.json  АвтоисправлениеПроблемы.json  АвтоматическийЭкспортЗамеровПроизводительности.json  АвтоматическоеПолучениеВыписки.json  АвторизациюПоЛогинуПаролю.json  Авторизация.json  АдресУчастникаОбменаЭД.json  АктивацияПрограммы.json  АктивныеПользователи.json  АктуализацияУстаревшегоКлассификатора.json  АкцияФССПлюсПФР.json  АналитикаСчета.json  Аннулирование.json  Банки.json  (+2205 more)
test_parallel/: test_1.bsl  test_10.bsl  test_11.bsl  test_12.bsl  test_13.bsl  test_14.bsl  test_15.bsl  test_16.bsl  test_17.bsl  test_18.bsl  test_19.bsl  test_2.bsl  test_20.bsl  test_21.bsl  test_22.bsl  test_23.bsl  test_24.bsl  test_3.bsl  test_4.bsl  test_5.bsl  test_6.bsl  test_7.bsl  test_8.bsl  test_9.bsl
tests/: arena_snapshots.rs  bom_test.rs  dirty_range.rs  fingerprint_diff.rs  integration_test.rs  parity_arena.rs  test_dual_extractor.rs
vscode-extension/: .vscodeignore  CHANGELOG_SETTINGS.md  DEVELOPMENT_SUMMARY.md  INSTALLATION.md  LICENSE  README.md  SETTINGS_EXAMPLE.md  TESTING_PROGRESS.md  bsl-analyzer-1.0.0.vsix  language-configuration.json  package-lock.json  package.json  tsconfig.json
(+13591 files in other folders)
