[package]
name = "bsl-analyzer"
version = "0.1.0"
edition = "2021"
authors = ["BSL Analyzer Team"]
description = "Advanced BSL (1C:Enterprise) static analyzer with type safety checking"
license = "MIT"
repository = "https://github.com/your-org/bsl-analyzer"
keywords = ["bsl", "1c", "static-analysis", "type-safety"]
categories = ["development-tools", "parser-implementations"]

[dependencies]
# Парсинг
nom = "7.1"                           
logos = "0.14"                        

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Сериализация
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"                          # Для TOML конфигураций
serde_yaml = "0.9"                    # Для YAML конфигураций

# CLI
clap = { version = "4.4", features = ["derive", "color"] }
console = "0.15"                      
indicatif = "0.17"                    

# LSP сервер
tower-lsp = "0.20"

# Параллелизм
rayon = "1.8"                         
num_cpus = "1.16"

# Работа с файлами
walkdir = "2.4"                       

# Error handling
anyhow = "1.0"                        
thiserror = "1.0"                     

# Логирование
tracing = "0.1"                       
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Утилиты
regex = "1.10"                        
uuid = { version = "1.6", features = ["v4"] }

# XML парсинг для метаданных 1С
quick-xml = { version = "0.31", features = ["serialize"] }

# Для интеграции Python парсеров
# HTML парсинг документации (1c-help-parser)
scraper = "0.18"                      # Замена BeautifulSoup
zip = "0.6"                          # Для .hbk архивов

# Кодировки для конфигураций 1С (onec-contract-generator)
encoding_rs = "0.8"                  # Поддержка UTF-16, CP1251

# Дата и время для метаданных генерации
chrono = { version = "0.4", features = ["serde"] }

# Кэширование и сжатие
flate2 = "1.0"                       # Для сжатия данных кэша
bincode = "1.3"                      # Для сериализации кэша

# Тестирование
[dev-dependencies]
tempfile = "3.8"                      
pretty_assertions = "1.4"            

# Оптимизация для release
[profile.release]
opt-level = 3           
lto = true             
codegen-units = 1      
panic = "abort"        

# Бинарники
[[bin]]
name = "bsl-analyzer"
path = "src/main.rs"

# BSL Documentation parsers
[[bin]]
name = "extract_hybrid_docs"
path = "src/bin/extract_hybrid_docs.rs"

# 1C Metadata parsers (renamed for clarity)
[[bin]]
name = "parse_metadata_full"
path = "src/bin/parse_test_metadata.rs"

[[bin]]
name = "parse_metadata_simple"
path = "src/bin/test_metadata_parser.rs"

[[bin]]
name = "analyze_metadata_types"
path = "src/bin/test_new_attributes.rs"

# Legacy binaries (kept for compatibility)
[[bin]]
name = "test_hbk_parser"
path = "test_hbk_parser.rs"

[[bin]]
name = "test_chunked_export"
path = "test_chunked_export.rs"

[[bin]]
name = "enhance_index"
path = "enhance_index.rs"

[[bin]]
name = "analyze_objects"
path = "src/bin/analyze_objects.rs"

[[bin]]
name = "convert_to_hybrid"
path = "src/bin/convert_to_hybrid.rs"

[[bin]]
name = "extract_config_metadata"
path = "src/bin/extract_config_metadata.rs"

[[bin]]
name = "extract_forms"
path = "src/bin/extract_forms.rs"

[[bin]]
name = "analyze_real_report"
path = "src/bin/analyze_real_report.rs"
