[package]
name = "bsl-analyzer"
version = "1.8.0"
edition = "2021"
authors = ["BSL Analyzer Team"]
description = "Advanced BSL (1C:Enterprise) static analyzer with type safety checking"
license = "MIT"
repository = "https://github.com/your-org/bsl-analyzer"
keywords = ["bsl", "1c", "static-analysis", "type-safety"]
categories = ["development-tools", "parser-implementations"]

# Профили сборки для ускорения разработки
[profile.dev]
opt-level = 0           # Без оптимизации для быстрой сборки
debug = true           # Отладочная информация
incremental = true     # Инкрементальная компиляция

[profile.dev-fast]
inherits = "dev"
opt-level = 1          # Минимальная оптимизация для компромисса скорость/производительность
debug = "line-tables-only"  # Только номера строк для отладки

[profile.release]
opt-level = 3          # Максимальная оптимизация
debug = false          # Без отладочной информации
lto = true            # Link Time Optimization
panic = "abort"       # Меньший размер бинарников

[dependencies]
# Парсинг
nom = "7.1"                           
logos = "0.14"                        

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Сериализация
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"                          # Для TOML конфигураций
serde_yaml = "0.9"                    # Для YAML конфигураций

# CLI
clap = { version = "4.4", features = ["derive", "color"] }
console = "0.15"                      
indicatif = "0.17"                    

# LSP сервер
tower-lsp = "0.20"

# Параллелизм
rayon = "1.8"                         
num_cpus = "1.16"

# Работа с файлами
walkdir = "2.4"                       

# Error handling
anyhow = "1.0"                        
thiserror = "1.0"                     

# Логирование
tracing = "0.1"                       
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"                          # Для совместимости с log макросами

# Tree-sitter для BSL парсера
tree-sitter = "0.22"
tree-sitter-highlight = "0.22"
tree-sitter-language = "0.1"
# tree-sitter-bsl = { git = "https://github.com/alkoleft/tree-sitter-bsl" } # Временно отключено

# Утилиты
regex = "1.10"                        
uuid = { version = "1.6", features = ["v4"] }
once_cell = "1.19"                    # Для lazy static инициализации

# XML парсинг для метаданных 1С
quick-xml = { version = "0.31", features = ["serialize"] }

# Для интеграции Python парсеров
# HTML парсинг документации (1c-help-parser)
scraper = "0.18"                      # Замена BeautifulSoup
zip = "0.6"                          # Для .hbk архивов

# Кодировки для конфигураций 1С (onec-contract-generator)
encoding_rs = "0.8"                  # Поддержка UTF-16, CP1251

# Дата и время для метаданных генерации
chrono = { version = "0.4", features = ["serde"] }

# Кэширование и сжатие
flate2 = "1.0"                       # Для сжатия данных кэша
bincode = "1.3"                      # Для сериализации кэша

# Schema generation for MCP
schemars = "0.8"                     # Для генерации JSON схем в MCP

# Графы для наследования типов
petgraph = "0.6"                     # Для графов наследования в UnifiedBslIndex

# Директории пользователя
dirs = "5.0"                         # Для определения домашней директории

# MCP Server - временно отключено до выбора стабильной версии SDK
# rmcp = { version = "0.3.2", features = ["server", "transport-io"] }

# Тестирование
[dev-dependencies]
tempfile = "3.8"                      
pretty_assertions = "1.4"            

# Бинарники
[[bin]]
name = "bsl-analyzer"
path = "src/main.rs"

# BSL Documentation parsers
[[bin]]
name = "extract_hybrid_docs"
path = "src/bin/extract_hybrid_docs.rs"

# 1C Metadata parsers (renamed for clarity)

[[bin]]
name = "parse_metadata_simple"
path = "tests/bin/test_metadata_parser.rs"


# Legacy binaries (kept for compatibility)

[[bin]]
name = "analyze_objects"
path = "src/bin/analyze_objects.rs"




[[bin]]
name = "analyze_real_report"
path = "src/bin/analyze_real_report.rs"

# Unified Type System binaries
[[bin]]
name = "build_unified_index"
path = "src/bin/build_unified_index.rs"

[[bin]]
name = "query_type"
path = "src/bin/query_type.rs"

[[bin]]
name = "extract_platform_docs"
path = "src/bin/extract_platform_docs.rs"

[[bin]]
name = "incremental_update"
path = "src/bin/incremental_update.rs"

[[bin]]
name = "check_type_compatibility"
path = "src/bin/check_type_compatibility.rs"

# MCP Server
[[bin]]
name = "bsl-mcp-server"
path = "src/bin/mcp_server.rs"

# LSP Server
[[bin]]
name = "lsp_server"
path = "src/lsp_main.rs"

# BSL Syntax Checker
[[bin]]
name = "syntaxcheck"
path = "src/bin/syntaxcheck.rs"

# BSL Semantic Analysis Testing
[[bin]]
name = "test_advanced_semantic"
path = "tests/bin/test_advanced_semantic.rs"

[[bin]]
name = "test_method_validation"
path = "tests/bin/test_method_validation.rs"

[[bin]]
name = "test_full_integration"
path = "tests/bin/test_full_integration.rs"

[[bin]]
name = "test_cli_integration"
path = "tests/bin/test_cli_integration.rs"

# Debug and testing binaries
[[bin]]
name = "debug_local_functions"
path = "tests/bin/debug_local_functions.rs"


[[bin]]
name = "test_analyzer"
path = "tests/bin/test_analyzer.rs"

[[bin]]
name = "test_auto_keywords"
path = "tests/bin/test_auto_keywords.rs"

[[bin]]
name = "test_client"
path = "tests/bin/test_client.rs"

[[bin]]
name = "test_semantic"
path = "tests/bin/test_semantic.rs"

[[bin]]
name = "demo_context_analysis"
path = "src/bin/demo_context_analysis.rs"
